<resources>
    <string name="app_name">curriculum-vitae</string>
    <string name="job_title">Android Developper</string>
    <string name="thibault_s_picture">Thibault\'s picture</string>
    <string name="email_address">thibaultdenis1996@gmail.com</string>
    <string name="address">Tours 37100 France</string>
    <string name="phone_number">+33 6 46 76 81 16</string>
    <string name="birth_date">01/20/1996</string>
    <string name="menu_title_home">CV Thibault DENIS</string>
    <string name="menu_title_skills">Skills</string>
    <string name="menu_title_education">Educations</string>
    <string name="menu_title_experience">Experiences</string>
    <string name="about_text">I’m a french Android developer and I’m looking for a Android developer job.</string>
    <string name="about_title">About</string>
    <string name="skills_text"> • Java, Kotlin\n• XML, HTML, CSS</string>
    <string name="languages_title">Languages</string>
    <string name="languages_text"> French : Fluent and native\nEnglish : 855 TOEIC (2018)</string>
    <string name="knowledge_title">Knowledge in</string>
    <string name="knowledge_text"> • C, C++, C# \n • Python \n • ReactiveX (Java et Kotlin) \n • PHP</string>
    <string name="further_informations_title">Further informations</string>
    <string name="further_info_text">• Regular use of IT tools (Android Studio, Fork, Slack, Charles, Firebase, Zeplin etc.) practices rules mastering (Git, Gradle, Selenium, Maven, JMeter, SVN etc.) \n\n• Knowledge of Clean Architecture, MockK, Jenkins, MVP, MVVM, Room \n\n• Teamworking and project management in agile / scrum and classic method</string>
    <string name="education_date_19_20">2019 – 2020</string>
    <string name="education_diploma_qc">Mastery of computer science</string>
    <string name="education_location_qc">UQAC, Chicoutimi (CANADA)</string>
    <string name="education_description_qc">double degree : Polytech Tours - Université du Québec A Chicoutimi</string>
    <string name="education_date_16_19">2016 – 2019</string>
    <string name="education_diploma_polytech">Polytech Informatique</string>
    <string name="education_location_polytech">Université François Rabelais, Tours</string>
    <string name="education_description_polytech">Specialty Information System</string>
    <string name="education_date_14_16">2014 – 2016</string>
    <string name="education_diploma_dut">DUT MMI</string>
    <string name="education_location_dut">Université François Rabelais, Blois</string>
    <string name="education_description_dut">Métier du Multimédia et de l’Internet : Specialty Web Environment and Multimedia Applications</string>
    <string name="education_date_14">2014</string>
    <string name="education_diploma_bac">Baccalauréat (high school)</string>
    <string name="education_location_bac">Lycée Choiseul, Tours</string>
    <string name="education_description_bac">Economic and Social Branch Mathematical specialty.</string>

    <string name="experience_company_shopmium">Shopmium</string>
    <string name="experience_poste_shopmium">Mobile Developer - Team Android : 6 months</string>
    <string name="experience_duration_shopmium">Internship, 2019-2020</string>
    <string name="experience_description_shopmium">Development and maintenance of the Shopmium Android application in Kotlin and ReactiveX on Android Studio</string>
    <string name="experience_company_atos2">ATOS</string>
    <string name="experience_poste_atos2">Junior developer : 2 months</string>
    <string name="experience_duration_atos2">Internship, 2018</string>
    <string name="experience_description_atos2">Realization and maintenance of a JEE website, autonomous</string>
    <string name="experience_company_mcdo">McDonald’s</string>
    <string name="experience_poste_mcdo">2 months</string>
    <string name="experience_duration_mcdo">CDI, 2017</string>
    <string name="experience_description_mcdo">Team working, contact with customers, inventory management</string>
    <string name="experience_poste_atos">Junior developer : 3 months</string>
    <string name="experience_duration_atos">Internship, 2016</string>
    <string name="experience_description_atos">Realization of a JEE website,team working</string>
    <string name="experience_company_skf">SKF</string>
    <string name="experience_poste_skf">2 months</string>
    <string name="experience_duration_skf">interim, 2015</string>
    <string name="experience_description_skf">Summer work of maintenance and maintenance of a machining center</string>

</resources>
