<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_textView"
                style="@style/title1_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_title_skills"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/skills_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/skills_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <TextView
                android:id="@+id/languages_title_textView"
                style="@style/title2_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skills_textView" />

            <TextView
                android:id="@+id/languages_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languages_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languages_title_textView" />

            <TextView
                android:id="@+id/knowledge_title_textView"
                style="@style/title2_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knowledge_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languages_textView" />

            <TextView
                android:id="@+id/knowledge_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/knowledge_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/knowledge_title_textView" />

            <TextView
                android:id="@+id/further_info_title_textView"
                style="@style/title1_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/further_informations_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/knowledge_textView" />

            <TextView
                android:id="@+id/further_info_text_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/further_info_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/further_info_title_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
