<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/home_picture_size"
        android:layout_height="@dimen/home_picture_size"
        android:layout_marginTop="@dimen/small_margin"
        android:contentDescription="@string/thibault_s_picture"
        android:src="@drawable/thibault_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/job_title_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="monospace"
        android:text="@string/job_title"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_title_EditText"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/email_imageView"
                android:layout_width="@dimen/home_picto_size"
                android:layout_height="@dimen/home_picto_size"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/home_picto_padding"
                android:src="@android:drawable/ic_dialog_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/phone_imageView"
                android:layout_width="@dimen/home_picto_size"
                android:layout_height="@dimen/home_picto_size"
                android:layout_marginTop="@dimen/standard_margin"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/home_picto_padding"
                android:src="@android:drawable/stat_sys_phone_call"
                app:layout_constraintStart_toStartOf="@+id/email_imageView"
                app:layout_constraintTop_toBottomOf="@+id/email_imageView" />

            <ImageView
                android:id="@+id/address_imageView"
                android:layout_width="@dimen/home_picto_size"
                android:layout_height="@dimen/home_picto_size"
                android:layout_marginTop="@dimen/standard_margin"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/home_picto_padding"
                android:src="@drawable/house"
                app:layout_constraintStart_toStartOf="@+id/phone_imageView"
                app:layout_constraintTop_toBottomOf="@+id/phone_imageView" />

            <ImageView
                android:id="@+id/calendar_imageView"
                android:layout_width="@dimen/home_picto_size"
                android:layout_height="@dimen/home_picto_size"
                android:layout_marginTop="@dimen/standard_margin"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/home_picto_padding"
                android:src="@drawable/calendar"
                app:layout_constraintStart_toStartOf="@+id/address_imageView"
                app:layout_constraintTop_toBottomOf="@+id/address_imageView" />

            <TextView
                android:id="@+id/email_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:text="@string/email_address"
                app:layout_constraintBottom_toBottomOf="@+id/email_imageView"
                app:layout_constraintStart_toEndOf="@+id/email_imageView"
                app:layout_constraintTop_toTopOf="@+id/email_imageView" />

            <TextView
                android:id="@+id/phone_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:text="@string/phone_number"
                app:layout_constraintBottom_toBottomOf="@+id/phone_imageView"
                app:layout_constraintStart_toEndOf="@+id/phone_imageView"
                app:layout_constraintTop_toTopOf="@+id/phone_imageView" />

            <TextView
                android:id="@+id/address_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:text="@string/address"
                app:layout_constraintBottom_toBottomOf="@+id/address_imageView"
                app:layout_constraintStart_toEndOf="@+id/address_imageView"
                app:layout_constraintTop_toTopOf="@+id/address_imageView" />

            <TextView
                android:id="@+id/calendar_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:text="@string/birth_date"
                app:layout_constraintBottom_toBottomOf="@+id/calendar_imageView"
                app:layout_constraintStart_toEndOf="@+id/calendar_imageView"
                app:layout_constraintTop_toTopOf="@+id/calendar_imageView" />

            <ImageView
                android:id="@+id/copy_email_address_imageView"
                android:layout_width="@dimen/copy_icon_size"
                android:layout_height="@dimen/copy_icon_size"
                android:layout_marginStart="@dimen/small_margin"
                android:src="@drawable/copy"
                app:layout_constraintBottom_toBottomOf="@+id/email_textView"
                app:layout_constraintStart_toEndOf="@+id/email_textView"
                app:layout_constraintTop_toTopOf="@+id/email_textView" />

            <ImageView
                android:id="@+id/copy_phone_number_imageView"
                android:layout_width="@dimen/copy_icon_size"
                android:layout_height="@dimen/copy_icon_size"
                android:layout_marginStart="@dimen/small_margin"
                android:src="@drawable/copy"
                app:layout_constraintBottom_toBottomOf="@+id/phone_textView"
                app:layout_constraintStart_toEndOf="@+id/phone_textView"
                app:layout_constraintTop_toTopOf="@+id/phone_textView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/about_title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:fontFamily="monospace"
                android:text="@string/about_title"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar_imageView" />

            <TextView
                android:id="@+id/about_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/about_text"
                app:layout_constraintTop_toBottomOf="@+id/about_title_TextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>